# wind-farm-env

./: .gitignore  LICENSE  README.md  build-test.py  requirements.txt  setup.cfg
code/: action_representation_floris.json  main.py  tensorboard_to_csv.py
code/agent/: __init__.py  agent.py  floris_agent.py  naive_agent.py
code/agent/deep/: __init__.py  actor.py  critic.py  polyak_update.py  replay_buffer.py  sac.py  td3.py
code/agent/multi/: __init__.py  coordinating_agent.py  multi_agent.py  multi_agent_naive.py
code/configs/: action_representations_baselines.yml  multi_agent_1.yml
code/wind_farm_gym/: farm_visualization.py  wind_farm_env.py  wind_map.py
code/wind_farm_gym/wind_process/: __init__.py  csv_process.py  mv_gaussian_noise_process.py  mvou_process.py  noise_process.py  wind_process.py
data/action_representations_tunnel/: eval.csv
data/noisy_1/: eval.csv
data/noisy_3/: eval.csv
data/noisy_5/: eval.csv
data/noisy_7/: eval.csv
data/wind_data/HKNB/: HKNB.csv
wind_farm_gym/: __init__.py  farm_visualization.py  rendering.py  wind_farm_env.py  wind_map.py
wind_farm_gym/wind_process/: mvou_process.py
