[metadata]
name = wind_farm_gym
version = 0.0.3
author = Grigory (Greg) Neustroev
author_email = g.neustroev@tudelft.nl
description = An OpenAI Gym environment for active wake control via reinforcement learning
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AlgTUDelft/wind-farm-env
project_urls =
    Bug Tracker = https://github.com/AlgTUDelft/wind-farm-env/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_requires =
    pyglet==1.5.21
    gymnasium==0.29.1
    matplotlib
    numpy
    scipy
    FLORIS==2.4
packages =
    wind_farm_gym
    wind_farm_gym.wind_process
python_requires = >=3.8

[options.package_data]
* = *.json
